fix: adjust spacing between message border and drawer - MEED-8526 - Meeds-io/MIPs#163

--- a/webapp/src/main/webapp/css/matrix.less
+++ b/webapp/src/main/webapp/css/matrix.less
@@ -248,10 +248,6 @@
     width: 100%;
     overflow-y: auto !important;
   }
-  .message-container {
-    max-width: 344px;
-    min-width: 100px;
-  }
 
   .message-reactions {
     margin-top: -4px;
